@@ -19,8 +19,7 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
- * The ReservationServiceImpl class is an implementation of the ReservationService interface.
- * It provides methods for managing reservations in a tutoring application.
+ * The type Reservation service.
  */
 @Service
 @Slf4j
@@ -36,15 +35,9 @@ public class ReservationServiceImpl implements ReservationService {
     private String reservationApprovedTopic;
     private final KafkaTemplate<String, ReservationDTO> kafkaReservationTemplate;
 
-    /**
-     * Saves a new reservation to the system, creating a record of the booking.
-     *
-     * @param reservationDTO The ReservationDTO object containing reservation information to be saved.
-     * @return The ReservationDTO object representing the saved reservation.
-     */
     @Override
     public ReservationDTO save(ReservationDTO reservationDTO) {
-        if (CommonSecurityUtils.getCurrentUserId().isPresent()) {
+        if(CommonSecurityUtils.getCurrentUserId().isPresent()){
             reservationDTO.setTutorUserId(CommonSecurityUtils.getCurrentUserId().get());
         }
         log.info("Reservation process started...");
@@ -62,13 +55,6 @@ public class ReservationServiceImpl implements ReservationService {
         return reservationDTO;
     }
 
-    /**
-     * Retrieves a list of reservations associated with a specific tutor requirement or subject.
-     * This can be useful for tutors to see all their bookings for a particular subject.
-     *
-     * @param tutorRequirement The ID of the tutor requirement or subject to filter reservations.
-     * @return A list of ReservationDTO objects matching the specified tutor requirement.
-     */
     @Override
     public List<ReservationDTO> findAllByTutorRequirementId(String tutorRequirement) {
         List<Reservation> reservationList = reservationRepository.findReservationsByTutorRequirementId(tutorRequirement);
@@ -76,38 +62,26 @@ public class ReservationServiceImpl implements ReservationService {
             log.info("Failure: Reservations are not found in the system");
             throw new RuntimeException("Sorry, reservations are not found in the system");
         }
-        List<ReservationDTO> reservationDTOList = reservationList.stream()
-                .map(reservation -> modelMapper.map(reservation, ReservationDTO.class))
-                .collect(Collectors.toList());
+        List<ReservationDTO> reservationDTOList = reservationList.stream().map(
+                reservation -> modelMapper.map(reservation, ReservationDTO.class)
+        ).toList();
         log.info("Reservation List sent for tutorRequirementId: {}", tutorRequirement);
         return reservationDTOList;
     }
 
-    /**
-     * Fetches a specific reservation by its unique identifier, allowing for detailed information retrieval or updates.
-     *
-     * @param id The unique identifier of the reservation to be retrieved.
-     * @return The ReservationDTO object representing the found reservation.
-     */
     @Override
     public ReservationDTO findById(String id) {
         Optional<Reservation> reservationOptional = reservationRepository.findById(id);
-        Reservation reservation = reservationOptional.orElseThrow(() -> {
+        Reservation reservation = reservationOptional.orElseThrow();
+        if (reservation == null) {
             log.error("Failure: Reservation not found with id {}", id);
-            return new RuntimeException("Sorry, reservation not found in the system");
-        });
+            throw new RuntimeException("Sorry, reservation not found in the system");
+        }
         ReservationDTO reservationDTO = modelMapper.map(reservation, ReservationDTO.class);
-        log.info("Success: Reservation found with id {}", id);
+        log.info("Success: Reservation found with id{}", id);
         return reservationDTO;
     }
 
-    /**
-     * Updates the status of a reservation, such as confirming or canceling it.
-     * This function is essential for managing the booking lifecycle.
-     *
-     * @param reservationDTO The ReservationDTO object containing updated reservation status.
-     * @return The ReservationDTO object representing the updated reservation.
-     */
     @Override
     @Transactional
     public ReservationDTO updateReservationStatus(ReservationDTO reservationDTO) {
@@ -125,29 +99,21 @@ public class ReservationServiceImpl implements ReservationService {
         return modelMapper.map(reservation, ReservationDTO.class);
     }
 
-    /**
-     * Retrieves all reservations made by a tutor user, helping tutors keep track of their appointments.
-     *
-     * @return A list of ReservationDTO objects representing reservations made by the tutor user.
-     */
     @Override
     public List<ReservationDTO> findAllReservationByTutorUserId() {
         Long userId = CommonSecurityUtils.getCurrentUserId().get();
-        return reservationRepository.findAllByTutorUserId(userId).stream()
-                .map(re -> modelMapper.map(re, ReservationDTO.class))
-                .collect(Collectors.toList());
+        return reservationRepository.findAllByTutorUserId(userId).stream().map(
+                re -> modelMapper.map(re, ReservationDTO.class)
+        ).collect(Collectors.toList());
     }
 
-    /**
-     * Fetches all reservation requests made by a student user, enabling students to view their pending or confirmed bookings.
-     *
-     * @return A list of ReservationDTO objects representing reservation requests made by the student user.
-     */
     @Override
     public List<ReservationDTO> findAllReservationRequestByStudentUserId() {
         Long userId = CommonSecurityUtils.getCurrentUserId().get();
-        return reservationRepository.findAllByStudentUserId(userId).stream()
-                .map(re -> modelMapper.map(re, ReservationDTO.class))
-                .collect(Collectors.toList());
+        return reservationRepository.findAllByStudentUserId(userId).stream().map(
+                re -> modelMapper.map(re, ReservationDTO.class)
+        ).collect(Collectors.toList());
     }
+
+
 }
